# bfcc

./: .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
examples/: hello_world.bf
src/: builder.cc  builder.hpp  compiler.cc  compiler.hpp  ir.hpp  main.cc  main.cpp  runner.cc  runner.hpp  utils.cc  utils.hpp
